# refinery

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.buildkite/: pipeline.yml
crates/converge_cli/: Cargo.toml
crates/converge_core/: Cargo.toml
crates/converge_providers/: Cargo.toml
crates/converge_providers/src/: claude.rs  codex.rs  credential.rs  gemini.rs  lib.rs  process.rs
crates/refinery_cli/: Cargo.toml
crates/refinery_cli/src/: main.rs  progress.rs
crates/refinery_cli/src/commands/: README.md  benchmark_brainstorm.rs  brainstorm.rs  common.rs  converge.rs  mod.rs  review_brainstorm_panels.rs  synthesize.rs
crates/refinery_core/: Cargo.toml
crates/tundish_cli/: Cargo.toml
crates/tundish_cli/src/: main.rs
crates/tundish_core/: Cargo.toml
crates/tundish_core/src/: error.rs  lib.rs  progress.rs  types.rs  util.rs
crates/tundish_providers/: Cargo.toml
crates/tundish_providers/src/: claude.rs  codex.rs  credential.rs  gemini.rs  lib.rs  opencode.rs  pi.rs  process.rs  tools.rs
docs/: HANDOFF.md
docs/brainstorms/: 2026-02-10-consensus-loop-design-brainstorm.md  2026-02-12-readme-completion-brainstorm.md  2026-03-13-remove-refine-phase-brainstorm.md  2026-03-17-cli-subcommand-verbs-brainstorm.md  2026-03-18-synthesize-verb-requirements.md  2026-03-30-brainstorm-verb-requirements.md  2026-05-21-brainstorm-smoke-test-field-report.md  2026-05-21-toon-format-for-refinery-artifacts.md  2026-05-23-brainstorm-smoke-baseline.md  2026-05-23-brainstorm-strategy-benchmark-design.md  2026-05-23-six-prompt-brainstorm-benchmark.md  2026-05-25-brainstorm-meta-preamble-prompt-polish.md  2026-05-30-brainstorm-l2-iteration-strategy-benchmark.md  2026-06-01-brainstorm-l2-panel-review.md  2026-06-04-brainstorm-l3-prompt-reframing-smoke.md  2026-06-05-brainstorm-l3-updated-model-smoke.md  2026-06-09-brainstorm-l3-three-model-sample.md  2026-06-12-brainstorm-l3-parser-validation.md
docs/plans/: 2026-02-10-feat-consensus-loop-engine-plan.md  2026-02-11-feat-subscription-credential-support-plan.md  2026-02-12-docs-complete-readme-plan.md  2026-03-12-feat-file-input-support-plan.md  2026-03-13-refactor-provider-model-syntax-plan.md  2026-03-13-refactor-remove-refine-phase-plan.md  2026-03-14-feat-indicatif-multi-spinner-comfy-table-plan.md  2026-03-17-refactor-cli-subcommand-converge-plan.md  2026-03-18-001-feat-synthesize-verb-plan.md  2026-03-26-001-fix-pr26-review-comment-triage-plan.md  2026-03-31-001-feat-brainstorm-verb-plan.md  2026-04-01-001-test-brainstorm-verb-plan.md  2026-04-01-002-fix-brainstorm-review-comments-plan.md  2026-05-21-001-fix-brainstorm-provider-failure-observability-plan.md  2026-05-21-002-chore-brainstorm-p3-nitpicks-plan.md  2026-05-22-001-fix-json-serialization-failures-plan.md  2026-05-22-002-fix-tty-gate-ansi-escape-codes-plan.md  2026-05-23-001-research-brainstorm-strategy-benchmarks-plan.md  2026-05-24-001-feat-brainstorm-quality-floor-selection-plan.md  2026-05-25-001-fix-brainstorm-score-history-meta-preambles-plan.md  2026-06-04-001-feat-brainstorm-prompt-reframing-expansion-plan.md  2026-06-04-002-fix-stream-parse-pi-json-events-plan.md
todos/: 001-setsid-process-groups.md  002-cli-subcommand-converge.md  003-verb-synthesize.md  004-verb-brainstorm.md  005-verb-mine.md  007-run-dir-uniqueness.md  008-synthesize-total-calls-accuracy.md  009-synthesize-elapsed-time.md  010-tty-gate-ansi-escape-codes.md  011-verb-evolve.md  013-brainstorm-strategy-benchmarks.md  014-brainstorm-r4-wording-clarification.md  015-brainstorm-todo-upvote-terminology.md  016-silent-json-serialization-failure.md  017-brainstorm-p3-nitpicks.md  018-brainstorm-divergence-expansion.md  019-brainstorm-smoke-test-field-report.md  020-brainstorm-provider-failure-observability.md  021-evaluate-toon-for-artifact-prompt-export.md  022-opencode-concurrency-sqlite-wal.md  023-brainstorm-quality-floor-selection.md  024-brainstorm-suppress-score-history-meta-preambles.md  025-brainstorm-lineage-reference-polish.md  026-stream-parse-pi-json-events.md
(+41 files in other folders)
