[package]
name = "refinery_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "refinery"
path = "src/main.rs"

[dependencies]
tundish_core = { workspace = true }
tundish_providers = { workspace = true }
refinery_core = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
