[package]
name = "tundish_providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Provider implementations for multi-model prompt dispatch"

[features]
default = ["claude", "codex", "gemini", "opencode"]
claude = []
codex = []
gemini = []
opencode = []

[dependencies]
tundish_core = { workspace = true }
libc = "0.2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
